--- a/style.css
+++ b/style.css
@@ -90,3 +90,42 @@ a > svg > .insta:hover{
     color: rgb(244, 160, 174);
     transition: 0.6s;
 }     
+
+.espacoFooter {
+            padding-bottom: 10px;
+        }
+
+        .espacoFooterIcones {
+            padding-bottom: 25px;
+        }
+
+        .textoPrincipalFooter {
+            font-weight: bold;
+            font-size: 30px;
+        }
+
+        .textoFooter {
+            font-size: 15px;
+        }
+
+        .boxBordaArredonda {
+            border-radius: 25px;
+            background-color: #99ca42;
+            margin: 20px;
+        }
+
+        .textoChamadaBranco {
+            font-weight: bold;
+            font-size: 25px;
+            color: white;
+            text-align: center;
+        }
+
+        .figuraPrograma {
+            padding: 5px;
+            padding-bottom: 20px;
+            max-width: 300px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+
