--- a/style.css
+++ b/style.css
@@ -22,8 +22,9 @@
 
 .boxMenu{
     position: absolute;
-    z-index: 3;
+    z-index: 99999999;
     background-color: white;
+
 }
 
 .menuSuperior{
@@ -125,30 +126,46 @@ p {
     color: #99ca42;
 }
 
-.containerMissao{
-    margin-top: 25px;
-    width: 500px;
+.containerVerde{
+    margin: 25px auto 40px auto;
+    max-width: 700px;
+    width: 100%;
     background-color: #99ca42;
     color: white; 
-    border-radius: 30px;
-    border-color: #99ca42;
-    margin-left: auto;
-    margin-right: auto;
+    border-radius: 25px;
+
     text-align: justify;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 30px 10px 30px;
 }
 .fixed {
-    height: 20px;
-    width: 500px;
+    height: auto;
+    max-width: 500px;
+    z-index: 999999;
     position: fixed;
-    bottom: 200px;
-    right: 32px;
-    
+    display: block;
+    top: 50%;
+    right: -0px;
    }
 
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
+    max-width: 700px;
+    max-height: auto;
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+    border-radius: 20px 20px 0 0;
+    padding: 10px;
+}
+
+.carousel-caption{
+    display: block;
+    margin:7px;
+    left: 25%!important;
+    right: 25%!important;
+}
 
 .espacoFooter {
             padding-bottom: 10px;
@@ -167,14 +184,6 @@ p {
             font-size: 15px;
         }
 
-        .boxBordaArredonda {
-            border-radius: 25px;
-            background-color: #99ca42;
-            margin: 20px;
-            width: 100%;
-            max-width: 700px;
-        }
-
         .textoChamadaBranco {
             font-weight: bold;
             font-size: 25px;
@@ -186,7 +195,7 @@ p {
             padding: 5px;
             padding-bottom: 20px;
             max-width: 250px;
-            border-radius: 25px;
+            border-radius: 25px 25px 40px 40px;
             display: block;
             margin-left: auto;
             margin-right: auto;
