--- a/style.css
+++ b/style.css
@@ -102,18 +102,14 @@ p {
 
     display: flex;
     justify-content: center;
+    border-radius: 20px 20px 0 0 ;
+    margin-bottom: 30px;
    
-}
-
-.video{
-
-    margin-top: 80px;
-    
 }
 
 .boxPrincipal{
 
-    padding-top: 250px;
+    padding-top: 240px;
    
 }
 
@@ -166,7 +162,6 @@ p {
     left: 25%!important;
     right: 25%!important;
 }
-
 .espacoFooter {
             padding-bottom: 10px;
         }
